# temp-raytracer

./: .gitignore  Cargo.toml  Makefile  README.md  build.sh  ctoy_srgb.h  g_types.h  gl_crap.h  m_color.h  m_image.h  m_math.h  main.cpp  toy.c
glfw_fb/: glfw_fb.h  stb_easy_font.h
glfw_fb/src/: glfw_fb.cpp  glfw_fb.h
old/: m_math.h
old/glfw_fb/: glfw_fb.h
old/glfw_fb/src/: glfw_fb.cpp
src/: main.rs
src/support/: mod.rs
