[package]
name = "imgui-rs-example"
version = "0.1.0"
authors = ["Goncalo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = "0.5.0"
imgui-sys = "0.5.0"
imgui-glium-renderer = "0.5.0"
imgui-winit-support = "0.5.0"
clipboard = "0.5"
glium =  "0.27"